--- a/client/app/files/files/files.component.scss
+++ b/client/app/files/files/files.component.scss
@@ -1,9 +1,5 @@
-.margin-bottom-hint {
-    margin-bottom: 22.5px;
-}
-
-.mat-column-name {
-    width: 100%;
+.mat-column-delete {
+    width: 69px !important;
 }
 
 button[naturalFileSelect] {
