--- a/client/app/list/list.component.scss
+++ b/client/app/list/list.component.scss
@@ -15,7 +15,7 @@
 
     ::ng-deep {
         #main-natural-search .endOfRowButton {
-            margin-bottom: 13px !important;
+            margin-bottom: 11px !important;
         }
 
         // Prevent natural-group from wrapping chips to a second row when the toolbar
